Fixed display bug on mobile view

--- a/layouts/global.css
+++ b/layouts/global.css
@@ -28,7 +28,7 @@ html {
 .container {
     display: flex;
     margin: 0 auto;
-    min-height: 110vh;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -39,7 +39,13 @@ html {
     background-repeat: no-repeat;
     padding-top: 2rem;
     padding-bottom: 2rem;
+}
+
+@media screen and (min-width: 768px){
+  .container {
+    min-height: 110vh;
   }
+}
 
 .title {
   font-family: 'High Tide';
